oldGavelFiles/gavel_pretty_print.java

/* Generated By:JavaCC: Do not edit this line. gavel_pretty_print.java */
import java.io.*;

class gavel_pretty_print implements gavel_pretty_printConstants {
  public static void main(String args[]) throws ParseException, FileNotFoundException {

    PrintStream fileOut = new PrintStream("./PA03demo.java");
    System.setOut(fileOut);

    FileReader fileReader = new FileReader("PA03demo.txt");
    gavel_pretty_print parser = new gavel_pretty_print(fileReader);
    parser.Program(0);
    fileOut.close();

    PrintStream fileOut2 = new PrintStream("./mjpp.java");
    System.setOut(fileOut2);

    FileReader fileReader2 = new FileReader("mjpp.txt");
    parser.ReInit(fileReader2);
    parser.Program(0);
    fileOut2.close();
  }

  /* Program Syntax */
  static final public void Program(int indent) throws ParseException {
    StatementBlock(indent);
    jj_consume_token(0);
  }

  static final public void StatementBlock(int indent) throws ParseException {
    System.out.print("\n");
    label_1: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case CLASS:
        case PUBLIC:
        case RETURN:
        case IF:
        case WHILE:
        case BREAK:
        case FOREACH:
        case FOR:
        case NEW:
        case NULL:
        case TRUE:
        case FALSE:
        case CONTINUE:
        case PRIVATE:
        case PROTECTED:
        case THROW:
        case IDENTIFIER:
        case INTEGER:
        case CHARACTER:
        case STRING:
        case LPAREN:
        case BOOL_NEG:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
      }
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case NEW:
        case NULL:
        case TRUE:
        case FALSE:
        case IDENTIFIER:
        case INTEGER:
        case CHARACTER:
        case STRING:
        case LPAREN:
        case BOOL_NEG:
          System.out.print(("   ").repeat(indent));
          ExprVal1(indent);
          jj_consume_token(SEMICOLON);
          System.out.print(";\n");
          break;
        case RETURN:
          ReturnStatement(indent);
          break;
        case CLASS:
          ClassDeclaration(indent);
          break;
        case PUBLIC:
        case PRIVATE:
        case PROTECTED:
          MethodDeclaration(indent);
          break;
        case WHILE:
          WhileLoop(indent);
          break;
        case FOR:
          ForLoop(indent);
          break;
        case FOREACH:
          ForEachLoop(indent);
          break;
        case BREAK:
          BreakStatement(indent);
          break;
        case CONTINUE:
          ContinueStatement(indent);
          break;
        case THROW:
          ThrowStatement(indent);
          break;
        case IF:
          IfBlock(indent);
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
      }
    }
    System.out.print("\n");
  }

  static final public void ReturnStatement(int indent) throws ParseException {
    System.out.print(("   ").repeat(indent));
    jj_consume_token(RETURN);
    System.out.print("return ");
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case NEW:
      case NULL:
      case TRUE:
      case FALSE:
      case IDENTIFIER:
      case INTEGER:
      case CHARACTER:
      case STRING:
      case LPAREN:
      case BOOL_NEG:
        ExprVal1(indent);
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
    }
    jj_consume_token(SEMICOLON);
    System.out.print(";\n");
  }

  static final public void BreakStatement(int indent) throws ParseException {
    System.out.print(("   ").repeat(indent));
    jj_consume_token(BREAK);
    System.out.print("break");
    jj_consume_token(SEMICOLON);
    System.out.print(";\n");
  }

  static final public void ContinueStatement(int indent) throws ParseException {
    System.out.print(("   ").repeat(indent));
    jj_consume_token(CONTINUE);
    System.out.print("continue ");
    jj_consume_token(SEMICOLON);
    System.out.print(";\n");
  }

  static final public void ThrowStatement(int indent) throws ParseException {
    System.out.print(("   ").repeat(indent));
    jj_consume_token(THROW);
    System.out.print("throw ");
    ExprVal2(indent);
    jj_consume_token(SEMICOLON);
    System.out.print(";\n");
  }

  static final public void IfBlock(int indent) throws ParseException {
    System.out.print(("   ").repeat(indent));
    jj_consume_token(IF);
    System.out.print("if ");
    jj_consume_token(LPAREN);
    System.out.print("(");
    ExprVal2(indent);
    jj_consume_token(RPAREN);
    System.out.print(")");
    jj_consume_token(LBRACE);
    System.out.print("{");
    StatementBlock(indent + 1);
    jj_consume_token(RBRACE);
    System.out.print("\n" + ("   ").repeat(indent) + "}" + "\n");
    label_2: while (true) {
      switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case ELSEIF:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
      }
      System.out.print(("   ").repeat(indent));
      jj_consume_token(ELSEIF);
      System.out.print("else if ");
      jj_consume_token(LPAREN);
      System.out.print("(");
      ExprVal2(indent);
      jj_consume_token(RPAREN);
      System.out.print(")");
      jj_consume_token(LBRACE);
      System.out.print("{");
      StatementBlock(indent + 1);
      jj_consume_token(RBRACE);
      System.out.print("\n" + ("   ").repeat(indent) + "}" + "\n");
    }
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case ELSE:
        System.out.print(("   ").repeat(indent));
        jj_consume_token(ELSE);
        System.out.print("else");
        jj_consume_token(LBRACE);
        System.out.print("{");
        StatementBlock(indent + 1);
        jj_consume_token(RBRACE);
        System.out.print("\n" + ("   ").repeat(indent) + "}" + "\n");
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
    }
  }

  static final public void MethodDeclaration(int indent) throws ParseException {
    Token t;
    System.out.print(("   ").repeat(indent));
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case PUBLIC:
        jj_consume_token(PUBLIC);
        System.out.print("public ");
        break;
      case PRIVATE:
        jj_consume_token(PRIVATE);
        System.out.print("private ");
        break;
      case PROTECTED:
        jj_consume_token(PROTECTED);
        System.out.print("protected ");
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
    }
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case STATIC:
        jj_consume_token(STATIC);
        System.out.print("static ");
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
    }
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case VOID:
        jj_consume_token(VOID);
        System.out.print("void ");
        break;
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
        System.out.print(t.image);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
    }
    t = jj_consume_token(IDENTIFIER);
    System.out.print(" " + t.image);
    jj_consume_token(LPAREN);
    System.out.print("(");
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case NEW:
      case NULL:
      case TRUE:
      case FALSE:
      case IDENTIFIER:
      case INTEGER:
      case CHARACTER:
      case STRING:
      case LPAREN:
      case BOOL_NEG:
        CommaSeparatedExprList(indent);
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
    }
    jj_consume_token(RPAREN);
    System.out.print(")");
    jj_consume_token(LBRACE);
    System.out.print("{");
    StatementBlock(indent + 1);
    jj_consume_token(RBRACE);
    System.out.print("\n" + ("   ").repeat(indent) + "}" + "\n");
  }

  static final public void WhileLoop(int indent) throws ParseException {
    System.out.print(("   ").repeat(indent));
    jj_consume_token(WHILE);
    System.out.print("while");
    jj_consume_token(LPAREN);
    System.out.print("(");
    ExprVal2(indent);
    jj_consume_token(RPAREN);
    System.out.print(")");
    jj_consume_token(LBRACE);
    System.out.print("{");
    StatementBlock(indent + 1);
    jj_consume_token(RBRACE);
    System.out.print("\n" + ("   ").repeat(indent) + "}" + "\n");
  }

  static final public void ForLoop(int indent) throws ParseException {
    System.out.print(("   ").repeat(indent));
    jj_consume_token(FOR);
    System.out.print("for");
    jj_consume_token(LPAREN);
    System.out.print("(");
    ExprVal1(indent);
    jj_consume_token(SEMICOLON);
    System.out.print("; ");
    ExprVal1(indent);
    jj_consume_token(SEMICOLON);
    System.out.print("; ");
    ExprVal1(indent);
    jj_consume_token(RPAREN);
    System.out.print(")");
    jj_consume_token(LBRACE);
    System.out.print("{");
    StatementBlock(indent);
    jj_consume_token(RBRACE);
    System.out.print("\n" + ("   ").repeat(indent) + "}" + "\n");
  }

  static final public void ForEachLoop(int indent) throws ParseException {
    Token t;
    System.out.print(("   ").repeat(indent));
    jj_consume_token(FOREACH);
    System.out.print("for ");
    jj_consume_token(LPAREN);
    System.out.print("(");
    t = jj_consume_token(IDENTIFIER);
    System.out.print(t.image + " ");
    t = jj_consume_token(IDENTIFIER);
    System.out.print(t.image + " ");
    jj_consume_token(COLON);
    System.out.print(": ");
    ExprVal1(indent);
    jj_consume_token(RPAREN);
    System.out.print(") ");
    jj_consume_token(LBRACE);
    System.out.print("{");
    StatementBlock(indent);
    jj_consume_token(RBRACE);
    System.out.print("\n" + ("   ").repeat(indent) + "}" + "\n");
  }

  static final public void ClassDeclaration(int indent) throws ParseException {
    Token t;
    System.out.print(("   ").repeat(indent));
    jj_consume_token(CLASS);
    System.out.print("class ");
    t = jj_consume_token(IDENTIFIER);
    System.out.print(t.image);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case EXTENDS:
        jj_consume_token(EXTENDS);
        System.out.print(" extends ");
        ClassExtendsList(indent);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
    }
    jj_consume_token(LBRACE);
    System.out.print("{");
    StatementBlock(indent + 1);
    jj_consume_token(RBRACE);
    System.out.print("\n" + ("   ").repeat(indent) + "}" + "\n");
  }

  static final public void ClassExtendsList(int indent) throws ParseException {
    Token t;
    t = jj_consume_token(IDENTIFIER);
    System.out.print(t.image);
    ClassExtendsListP(indent);
  }

  static final public void ClassExtendsListP(int indent) throws ParseException {
    Token t;
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        System.out.print(" , ");
        t = jj_consume_token(IDENTIFIER);
        System.out.print(t.image + "");
        ClassExtendsListP(indent);
        break;
      default:
        jj_la1[10] = jj_gen;

    }
  }

  static final public void ExprVal1(int indent) throws ParseException {
    ExprVal2(indent);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case PLUS_EQUALS:
      case MINUS_EQUALS:
      case FORWARD_SLASH_EQUALS:
      case PERCENT_EQUALS:
      case ASSIGNMENT:
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
          case ASSIGNMENT:
            jj_consume_token(ASSIGNMENT);
            System.out.print(" = ");
            break;
          case PLUS_EQUALS:
            jj_consume_token(PLUS_EQUALS);
            System.out.print(" += ");
            break;
          case MINUS_EQUALS:
            jj_consume_token(MINUS_EQUALS);
            System.out.print(" -= ");
            break;
          case FORWARD_SLASH_EQUALS:
            jj_consume_token(FORWARD_SLASH_EQUALS);
            System.out.print(" /= ");
            break;
          case PERCENT_EQUALS:
            jj_consume_token(PERCENT_EQUALS);
            System.out.print(" %= ");
            break;
          default:
            jj_la1[11] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        ExprVal1(indent);
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
    }
  }

  static final public void ExprVal2(int indent) throws ParseException {
    ExprVal3(indent);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case QUESTIONMARK:
        jj_consume_token(QUESTIONMARK);
        System.out.print("?");
        ExprVal3(indent);
        jj_consume_token(COLON);
        System.out.print(":");
        ExprVal2(indent);
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
    }
  }

  static final public void ExprVal3(int indent) throws ParseException {
    ExprVal4(indent);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case OR:
        jj_consume_token(OR);
        System.out.print(" || ");
        ExprVal3(indent);
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
    }
  }

  static final public void ExprVal4(int indent) throws ParseException {
    ExprVal8(indent);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case AND:
        jj_consume_token(AND);
        System.out.print(" && ");
        ExprVal4(indent);
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
    }
  }

  static final public void ExprVal8(int indent) throws ParseException {
    ExprVal9(indent);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case NOT_EQUALS:
      case EQUALS:
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
          case EQUALS:
            jj_consume_token(EQUALS);
            System.out.print(" == ");
            break;
          case NOT_EQUALS:
            jj_consume_token(NOT_EQUALS);
            System.out.print(" != ");
            break;
          default:
            jj_la1[16] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        ExprVal8(indent);
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
    }
  }

  static final public void ExprVal9(int indent) throws ParseException {
    ExprVal11(indent);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case INSTANCEOF:
      case LE:
      case GE:
      case LT:
      case GT:
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
          case LT:
            jj_consume_token(LT);
            System.out.print(" < ");
            break;
          case LE:
            jj_consume_token(LE);
            System.out.print(" <= ");
            break;
          case GT:
            jj_consume_token(GT);
            System.out.print(" > ");
            break;
          case GE:
            jj_consume_token(GE);
            System.out.print(" >= ");
            break;
          case INSTANCEOF:
            jj_consume_token(INSTANCEOF);
            System.out.print("instanceof ");
            break;
          default:
            jj_la1[18] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        ExprVal9(indent);
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
    }
  }

  static final public void ExprVal11(int indent) throws ParseException {
    ExprVal12(indent);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case PLUS:
      case MINUS:
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
          case PLUS:
            jj_consume_token(PLUS);
            System.out.print("+");
            break;
          case MINUS:
            jj_consume_token(MINUS);
            System.out.print("-");
            break;
          default:
            jj_la1[20] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        ExprVal11(indent);
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
    }
  }

  static final public void ExprVal12(int indent) throws ParseException {
    ExprVal13__(indent);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case STAR:
      case FORWARD_SLASH:
      case PERCENT:
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
          case STAR:
            jj_consume_token(STAR);
            System.out.print("*");
            break;
          case FORWARD_SLASH:
            jj_consume_token(FORWARD_SLASH);
            System.out.print("/");
            break;
          case PERCENT:
            jj_consume_token(PERCENT);
            System.out.print("%");
            break;
          default:
            jj_la1[22] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        ExprVal12(indent);
        break;
      default:
        jj_la1[23] = jj_gen;
        ;
    }
  }

  static final public void ExprVal13__(int indent) throws ParseException {
    ExprVal13(indent);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case EXPONENT:
        jj_consume_token(EXPONENT);
        ExprVal13__(indent);
        break;
      default:
        jj_la1[24] = jj_gen;
        ;
    }
  }

  static final public void ExprVal13(int indent) throws ParseException {
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case NEW:
        jj_consume_token(NEW);
        System.out.print("new ");
        ExprVal14(indent);
        break;
      case NULL:
      case TRUE:
      case FALSE:
      case IDENTIFIER:
      case INTEGER:
      case CHARACTER:
      case STRING:
      case LPAREN:
      case BOOL_NEG:
        ExprVal14(indent);
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
    }
  }

  static final public void ExprVal14(int indent) throws ParseException {
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case BOOL_NEG:
        jj_consume_token(BOOL_NEG);
        System.out.print("!");
        ExprVal16(indent);
        break;
      case NULL:
      case TRUE:
      case FALSE:
      case IDENTIFIER:
      case INTEGER:
      case CHARACTER:
      case STRING:
      case LPAREN:
        ExprVal15(indent);
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
    }
  }

  static final public void ExprVal15(int indent) throws ParseException {
    ExprVal16(indent);
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case INCREMENT:
      case DECREMENT:
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
          case INCREMENT:
            jj_consume_token(INCREMENT);
            System.out.print("++");
            break;
          case DECREMENT:
            jj_consume_token(DECREMENT);
            System.out.print("--");
            break;
          default:
            jj_la1[27] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        break;
      default:
        jj_la1[28] = jj_gen;
        ;
    }
  }

  static final public void ExprVal16(int indent) throws ParseException {
    Token t;
    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        System.out.print("(");
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
          case NEW:
          case NULL:
          case TRUE:
          case FALSE:
          case IDENTIFIER:
          case INTEGER:
          case CHARACTER:
          case STRING:
          case LPAREN:
          case BOOL_NEG:
            ExprVal2(indent);
            break;
          default:
            jj_la1[29] = jj_gen;
            ;
        }
        jj_consume_token(RPAREN);
        System.out.print(")");
        ExprVal16P(indent);
        break;
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
        System.out.print(t.image);
        ExprVal16P(indent);
        break;
      case NULL:
      case TRUE:
      case FALSE:
      case INTEGER:
      case CHARACTER:
      case STRING:
        ExprBase(indent);
        break;
      default:
        jj_la1[30] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
    }
  }
